fixed footer and vertical alignment for all cells

--- a/css/style.css
+++ b/css/style.css
@@ -72,21 +72,24 @@ td{
   text-align: center;
   border-top: 2px solid black;
   padding: 10px;
+  vertical-align: middle;
 }
 
 /*Req 6b*/
 .colhead{
   color: #FFFFFF;
   min-width: 125px;
+  text-transform: uppercase;
   padding: 10px;
   text-align: center;
-  text-transform: uppercase;
+  vertical-align: middle;
   background-color: #7e0820;
 }
 /*Req 6c*/
 .rowhead{
   padding: 10px;
   text-align: center;
+  vertical-align: middle;
   border-top: 2px solid black;
   border-right: 2px solid black;
 }
@@ -138,5 +141,6 @@ footer{
   min-height: 75px;
   position: fixed;
   bottom: 0;
+  left: 0;
 }
 
